# aionr6-mpc-ros

./: README.md
ltvcmpc_controller/: CMakeLists.txt  package.xml
ltvcmpc_controller/launch/: mpcc_controller.launch  mpcc_controller_impl.launch  mpcc_controller_sim.launch  rover_gazebo.launch
ltvcmpc_controller/plots/06-10-2019, 19:03:39/: mpcc_params.txt
ltvcmpc_controller/scripts/: data_plotter  ltv_contouring_mpc.py  ltv_contouring_mpc_fast.py  mpcc_control_node  pid_control_node
ltvcmpc_controller/scripts/data/: center_path_track_points.mat  optimal_path_unicycle.mat  path_track_spline.mat  std_track_optimal.mat
ltvcmpc_gazebo_env/: CMakeLists.txt  package.xml
ltvcmpc_gazebo_env/launch/: rover_gazebo.launch
ltvcmpc_gazebo_env/models/rover_racetrack/: model.config  model.sdf
ltvcmpc_gazebo_env/worlds/: aionr1.world
ltvcmpc_msgs/: CMakeLists.txt  package.xml
ltvcmpc_msgs/msg/: Params.msg
ltvcmpc_msgs/scripts/: init_poisition_server.py
ltvcmpc_msgs/srv/: GetTrack.srv  InitPosition.srv
ltvcmpc_plotter/: CMakeLists.txt  package.xml
ltvcmpc_plotter/plots/01-11-2019, 11:34:36/: mpcc_params.txt
ltvcmpc_plotter/plots/01-11-2019, 11:39:32/: mpcc_params.txt
ltvcmpc_plotter/plots/01-11-2019, 11:46:01/: mpcc_params.txt
ltvcmpc_plotter/plots/01-11-2019, 11:54:03/: mpcc_params.txt
ltvcmpc_plotter/plots/01-11-2019, 12:02:40/: mpcc_params.txt
ltvcmpc_plotter/plots/01-11-2019, 13:45:11/: mpcc_params.txt
ltvcmpc_plotter/plots/01-11-2019, 13:53:36/: mpcc_params.txt
ltvcmpc_plotter/plots/01-11-2019, 14:02:16/: mpcc_params.txt
ltvcmpc_plotter/plots/01-11-2019, 14:43:02/: mpcc_params.txt
ltvcmpc_plotter/plots/01-11-2019, 14:44:31/: mpcc_params.txt
ltvcmpc_plotter/plots/30-10-2019, 17:48:26/: mpcc_params.txt
ltvcmpc_plotter/plots/31-10-2019, 15:31:18/: mpcc_params.txt
ltvcmpc_plotter/plots/31-10-2019, 18:18:20/: mpcc_params.txt
ltvcmpc_plotter/plots/31-10-2019, 18:39:33/: mpcc_params.txt
ltvcmpc_plotter/plots/31-10-2019, 18:53:28/: mpcc_params.txt
ltvcmpc_plotter/plots/31-10-2019, 21:15:32/: mpcc_params.txt
ltvcmpc_plotter/scripts/: data_plotter
ltvcmpc_services/: CMakeLists.txt  package.xml
ltvcmpc_services/scripts/: init_poisition_server  track_server
ltvcmpc_services/scripts/data/: center_path_track_spline.mat  std_track_optimalx4.mat  track_optimal.mat  track_shortest_dist_v8.mat
mpcc_msgs/: CMakeLists.txt  package.xml
mpcc_msgs/msg/: Constraints.msg  MPCC_Params.msg  Weights.msg
rover_implementation/: CMakeLists.txt  package.xml
rover_implementation/launch/: mpcc_controller.launch  rover_config.yaml  rover_implementation.launch  rover_pluginlists.yaml
rover_implementation/plots/07-10-2019, 15:16:35/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 15:26:26/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 15:31:32/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 15:33:35/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 16:04:50/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 16:13:45/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 17:52:18/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 18:03:07/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 18:20:34/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 18:25:41/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 18:28:48/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 18:32:15/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 18:33:21/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 18:40:21/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 18:41:42/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 18:48:52/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 19:58:48/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 20:01:48/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 20:12:34/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 20:15:17/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 23:14:36/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 23:19:50/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 23:20:58/: mpcc_params.txt
rover_implementation/plots/07-10-2019, 23:22:51/: mpcc_params.txt
rover_implementation/scripts/: .pid_test_node.py.swp  Dynamic_Plot_Unicycle_With_Increasing_Horizon_Script.py  data_plotter  data_plotter.py  get_states  interpolate.py  ltv_contouring_mpc.py  mpc_control_node  mpcc_camera_gentrack  mpcc_gps_loadtrack  pid_angle_node  pid_control_node
rover_implementation/src/: .rover_controller_node.cpp.swp
(+165 files in other folders)
