<?xml version="1.0"?>
<package format="2">

  <name>ltvcmpc_controller</name>
  <version>0.0.0</version>
  <description>Linear Time Varying Contouring MPC Controller for Aion Rover</description>
  <maintainer email="tony.srour95@gmail.com">Tony Srour</maintainer>
  <license>BSD</license>

  <author email="tony.srour95@gmail.com">Tony Srour</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ltvcmpc_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>ltvcmpc_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ltvcmpc_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
