<?xml version="1.0"?>
<package format="2">
  <name>mpcc_msgs</name>
  <version>0.0.0</version>
  <description>The mpcc_msgs package</description>
  <maintainer email="ttsrour@student.unimelb.edu.au">Tony Srour</maintainer>
  <license>BSD</license>
  <author email="tsrour@student.unimelb.edu.au">Tony Srour</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
