<?xml version="1.0"?>
<package format="2">

  <name>rover_implementation</name>
  <version>0.0.0</version>
  <description>Rover Implementation Package</description>
  <maintainer email="tsrour@student.unimelb.edu.au">Tony Srour</maintainer>
  <license>BSD</license>

  <author email="tsrour@student.unimelb.edu.au">Tony Srour</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>mpcc_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mpcc_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>mpcc_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
